修改订单布局

--- a/app/design/frontend/default/default/layout/sales.xml
+++ b/app/design/frontend/default/default/layout/sales.xml
@@ -109,6 +109,9 @@ Customer account home dashboard layout
                         <block type="tax/sales_order_tax" name="tax" template="tax/order/tax.phtml" />
                     </block>
                 </block>
+                <block type="core/template" name="lily_customer_nav_block" as="lily_customer_nav" template="page/html/lily_customer_nav.phtml">
+                    
+                </block>
             </block>
         </reference>
         <reference name="sales.order.info">
