--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -31,7 +31,7 @@
  * @var $this Mage_Customer_Block_Form_Register
  */
 ?>
-<div class="page page_club"club_member_formte">
+<div class="club_member_formte">
         <div class="club_tit  club_login_tit">
             <h2><?php echo $this->__('MEMBER<br>REGISTRATION') ?></h2>
         </div>
