--- a/app/design/frontend/base/default/template/points/order/info.phtml
+++ b/app/design/frontend/base/default/template/points/order/info.phtml
@@ -30,8 +30,9 @@
 
 
 
-<a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/" id="logout_link"><?php echo $this->__('Log Out')?></a>
-</div><div class="clear"></div>
+<div><a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/" id="logout_link"><?php echo $this->__('Log Out')?></a>
+</div>
+<div class="clear"></div>
 <br/>
 
 <div class="order-info-box">
