--- a/app/design/frontend/default/default/layout/sales.xml
+++ b/app/design/frontend/default/default/layout/sales.xml
@@ -92,9 +92,14 @@ Customer account home dashboard layout
     </sales_order_history>
 
 
-    <sales_order_view translate="label">
+    <sales_order_view_backup translate="label">
         <label>Customer My Account Order View</label>
         <update handle="customer_account"/>
+
+        <reference name="root">
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
+        </reference>
+
         <reference name="my.account.wrapper">
             <block type="sales/order_info" as="info" name="sales.order.info">
                 <block type="sales/order_info_buttons" as="buttons" name="sales.order.info.buttons" />
@@ -123,6 +128,34 @@ Customer account home dashboard layout
         <block type="core/text_list" name="additional.product.info" translate="label">
             <label>Additional Product Info</label>
         </block>
+    </sales_order_view_backup>
+
+    <sales_order_view translate="label">
+
+        <reference name="root">
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
+        </reference>
+        
+        <reference name="content">
+            <block type="sales/order_view" name="sales.order.view">
+                <block type="sales/order_items" name="order_items" template="sales/order/items.phtml">
+                    <action method="addItemRender"><type>default</type><block>sales/order_item_renderer_default</block><template>sales/order/items/renderer/default.phtml</template></action>
+                    <action method="addItemRender"><type>grouped</type><block>sales/order_item_renderer_grouped</block><template>sales/order/items/renderer/default.phtml</template></action>
+                    <block type="sales/order_totals" name="order_totals" template="sales/order/totals.phtml">
+                        <action method="setLabelProperties"><value>colspan="4" class="a-right"</value></action>
+                        <action method="setValueProperties"><value>class="last a-right"</value></action>
+                        <block type="tax/sales_order_tax" name="tax" template="tax/order/tax.phtml" />
+                    </block>
+                </block>
+                <block type="core/template" name="lily_customer_nav_block" as="lily_customer_nav" template="page/html/lily_customer_nav.phtml">
+                    
+                </block>
+
+                <block type="sales/order_info" as="info" name="sales.order.info">
+                    <block type="sales/order_info_buttons" as="buttons" name="sales.order.info.buttons" />
+                </block>
+            </block>
+        </reference>
     </sales_order_view>
 
     <sales_order_invoice translate="label">
