--- a/app/design/frontend/base/default/template/points/checkout.phtml
+++ b/app/design/frontend/base/default/template/points/checkout.phtml
@@ -1,6 +1,7 @@
 <div class="points_checkout product-essential">
-
-    
+	
+	<?php echo $this->getChildHtml("lily_customer_nav")?>
+	    
 	<div class="form-before">
 		<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('checkout_progress')->toHtml(); ?>
 		<div class="clear"></div>
