--- a/app/design/frontend/base/default/template/points/checkout/success.phtml
+++ b/app/design/frontend/base/default/template/points/checkout/success.phtml
@@ -1,3 +1,5 @@
+<?php echo $this->getChildHtml("lily_customer_nav")?>
+
 <div class="points_checkout">
 	<div class="form-before">
 		<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('checkout_progress')->toHtml(); ?>
