--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -3,6 +3,7 @@
 * zx 2014 06 09 */
 
 /**/
+* {max-height: 5000em;}
 .club{background: #f3dedd;}
 .page_club{padding: 120px 0 50px 0;background: #f3dedd;font-size:14px;}
 .page_club>div {opacity:0;}
@@ -40,19 +41,22 @@
 .club_member_form{width: 530px;margin: 100px auto}
 .club_member_form .validation-advice {display: none;}
 .club_member_sub{cursor:pointer;width: 308px;height: 48px;border:#000 solid 1px;color:#fff;background: #000;display: inline;margin: 30px auto;display: block;}
+.club_member_sub2 {margin:0;width:auto;padding:0 10px;height:42px;}
 .club_member_sub:hover {opacity:0.8}
-.club_memberreg{width: 608px;margin: 100px auto 0 auto}
+.club_memberreg{width: 800px;margin: 30px auto 0 auto}
 .club_memberreg_fi{margin: 0 0 10px }
-.club_memberreg_fi label {float:left;width:120px;margin:0 10px 0 0;color:#000;text-align:right;}
-.club_memberreg_edm {padding:0 0 0 35px;}
-.club_memberreg_fi .club_login_ipt{margin:0 auto;display: block;}
+.club_memberreg_fi label {float:left;width:120px;margin:4px 10px 0 0;color:#000;text-align:right;}
+.club_memberreg_edm {padding:0 0 0 131px;}
+.club_memberreg_fi .club_login_ipt{margin:0 auto;display:inline-block;float:none;}
+.club_memberreg_fi .club_login_ipt_short {width:80px;}
 .club_memberreg_fi{position: relative;}
-.club_memberreg_tips{position: absolute;left:310px;line-height: 48px;top:0;width:300px}
+.club_memberreg_tips{position: absolute;left:350px;line-height: 48px;top:0;width:300px}
 .club_memberreg_seltxt{width: 200px;height: 46px;border:#000 solid 1px;padding:0 16px;margin: 0 auto;color:#000;font-family:arial;background: #f3dedd;line-height: 46px;background: url('../images/club_memberreg_sel.png') no-repeat 94% 50%;}
 .club_memberreg_sel{position: absolute;width: 232px;height: 46px;display: block;top: 1px;left:38px;opacity: 0;filter:alpha(opacity=0);cursor: pointer;}
 .club_member_forget{width: 308px;margin: 0 auto 0 auto;text-align:center;}
 .club_member_forget .club_memberreg_fi {margin-top:20px;}
 .club_member_forget .fieldset {margin:0;padding:0;}
+.club-rule-content .club_login_txt {width:500px;margin:0 auto;text-align: center;}
 /**/
 .club_member_rule{text-align: center;margin: 0 auto;width: 860px}
 .club_member_rule h4{text-transform:uppercase;margin: 80px 0 40px}
@@ -176,60 +180,74 @@
 .dis_mobile { display: none }
 @media screen and (max-width:640px) {
 	.dis_mobile { display: block }
+    .wrap {margin:0!important;}
 	.footer{display: none}
 	.page{margin-bottom:0;}
-.club_tit{font-size: 72px;line-height: 72px}
-.club_exchange_txt,
-.club_ecoupon_center,
-.club_QA_txt,
-.club_login_txt,
-.club_member_rule,
-.club_giftcards,
-.club_delivery_txt{width:520px;font-size: 18px;margin: 0 auto}
-.club_member_table td, .club_member_table th{padding:10px 5px;}
-.club_ecoupon_nav{position: absolute;top: 0;left:0;display: none}
-.club_member_sub{font-size: 18px;width: 334px}
-.club_memberreg_tips{display: none}
-.club_memberreg_seltxt,
-.club_login_ipt{width: 300px}
-.club_memberreg_sel{width: 332px;left:2px}
-.club_login_form{width: 400px}
-.club_login_ipt{float: none;display: block;margin: 0 auto 30px}
-.club_login_sub{float: none;display: block;margin: 0 auto ;width: 334px;font-size: 18px}
-.club_login_formlink{font-size:18px;width: 334px;margin: 20px auto;float: none;display: block;}
-.club_login_regbtn{width: 334px;}
-.club_login_regtxt{font-size: 18px}
-.club_ecoupon_center,
-.club_giftcards{padding-left:0;}
-.club_ecoupon_com{float: none;margin: 0 auto}
-.menu{left:0;top:30px;width: 70px;height: 70px}
-.loading,
-.search,
-.language{display: none}
-.mobile_nav{position:fixed;top: 30px;left:102px;font-size: 18px;color:#fff;height: 70px;line-height: 70px;width: 436px;padding:0 25px;background:#000 url('../images/mobile_nav.gif') no-repeat 450px 50%;cursor: pointer;z-index: 300}
-.mobile_nav:hover .mobile_navbox{display: block;}
-.mobile_navbox{position: absolute;width: 486px;background: #fff;left:0;top: 70px;line-height: 60px;display: none}
-.mobile_navbox a{display: block;padding:0 25px;}
-.mobile_navbox strong{padding-top:20px;display: block;}
+    .page_club {font-size:18px;}
+    .club_tit{font-size: 72px;line-height: 72px}
+    .club_exchange_txt,
+    .club_ecoupon_center,
+    .club_QA_txt,
+    .club_login_txt,
+    .club_member_rule,
+    .club_giftcards,
+    .club_delivery_txt{width:420px;font-size: 18px;margin: 0 auto}
+    .club_login_txt {margin:0;}
+    .club_member_table td, .club_member_table th{padding:10px 5px;}
+    .club_ecoupon_nav{position: absolute;top: 0;left:0;display: none}
+    .club_member_sub{font-size: 18px;width: 334px}
+    .club_memberreg_tips{display: none}
+    .club_memberreg_seltxt,
+    .club_login_ipt{width: 300px}
+    .club_memberreg_sel{width: 332px;left:2px}
+    .club_login_form{width: 400px}
+    .club_login_ipt{float: none;display: block;margin: 0 0 15px 0;}
+    .club_login_sub{float: none;display: block;margin: 0  ;width: 334px;font-size: 18px}
+    .club_login_formlink{font-size:18px;width: 334px;margin: 20px 0;float: none;display: block;}
+    .club_login_regbtn{width: 334px;}
+    .club_login_regtxt{font-size: 18px}
+    .club_ecoupon_center,
+    .club_giftcards{padding-left:0;}
+    .club_ecoupon_com{float: none;margin: 0 auto}
+    .menu{left:0;top:30px;width: 70px;height: 70px}
+    .loading,
+    .search,
+    .language{display: none}
+    .mobile_nav{position:fixed;top: 30px;left:102px;font-size: 18px;color:#fff;height: 70px;line-height: 70px;width: 436px;padding:0 25px;background:#000 url('../images/mobile_nav.gif') no-repeat 450px 50%;cursor: pointer;z-index: 300}
+    .mobile_nav:hover .mobile_navbox{display: block;}
+    .mobile_navbox{position: absolute;width: 486px;background: #fff;left:0;top: 70px;line-height: 60px;display: none}
+    .mobile_navbox a{display: block;padding:0 25px;}
+    .mobile_navbox strong{padding-top:20px;display: block;}
 
-.club_giftcardtable{display: none}
-.club_mobilecardimg{float: left;margin-top:10px;}
-.club_img,
-.club_mobilecardimg .club_img{background: url('../images/club_phobgmobile.gif') no-repeat;width: 253px;height: 188px;margin: 0}
-.club_img img,
-.club_mobilecardimg img{width:238px;height: 175px}
-.club_imgtxt{width: 250px;top:75px;}
-.mobile_proinfor{float: right;width: 238px;line-height: 30px}
-.mobile_proitem {width: 520px;margin-top:50px;}
-.mobile_proinfortit{padding-top:5px;text-transform: uppercase;}
-.mobile_proinfor a{text-decoration: underline;}
-.club_giftcardcheckout{float: none;display: block;margin: 80px auto 0}
-.club_giftcard{width: 600px;}
-.club_ecoupon_center,
-.club_point{width: 580px}
-.club_pointexnav{display: none;}
-.club_ecoupon_center{padding: 0}
+    .club_mobilecardimg{float: left;margin-top:10px;}
+    .club_img,
+    .club_mobilecardimg .club_img{background:none;width: 253px;margin: 0}
+    .club_img img,
+    .club_mobilecardimg img{width:238px;height: 238px}
+    .club_pointimglist li {height:auto;}
+    .club_pointimglist .product-name,.club_pointimglist .product-attr {font-size:18px;}
+    .club_imgtxt{width: 250px;top:75px;}
+    .mobile_proinfor{float: right;width: 238px;line-height: 30px}
+    .mobile_proitem {width: 520px;margin-top:50px;}
+    .mobile_proinfortit{padding-top:5px;text-transform: uppercase;}
+    .mobile_proinfor a{text-decoration: underline;}
+    .club_giftcardcheckout{float: none;display: block;margin: 80px auto 0}
+    .club_giftcard{width: 600px;}
+    .club_ecoupon_center,
+    .club_point{width: 580px}
+    .club_pointexnav{display: none;}
+    .club_ecoupon_center{padding: 0}
+    .club_point table span.title {width:250px;}
+    .club_point table td {padding:5px;}
 
-.club_meminfolist ul{float: none}
-.club_meminpwform input{float: none;display: block;margin-bottom:20px;}
+    .club_meminfolist ul{float: none}
+    .club_meminpwform input{float: none;display: block;margin-bottom:20px;}
+
+    .club_login_wrap {width:auto;}
+    .club_login_left {float:none;width:443px;margin:0 auto;}
+    .club_login_right {float:none;width:443px;margin:20px auto 0 auto;}
+    .club_login_regbtn {margin:20px 0 0 0;}
+
+    .product-view .product-img-box {width:90%;margin:0 0 20px 5%;float:none;}
+    .product-view .product-shop {float:none;width:auto;clear:both;padding:20px 0 0;}
 }
