--- a/app/design/frontend/default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/view.phtml
@@ -102,9 +102,8 @@
 
 
                         <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                            <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
-                        <?php endif;?>
-                        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+                            <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
+                        <?php elseif ($_product->isSaleable() && $this->hasOptions()):?>
                             <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
                         <?php endif;?>
                     </div>
@@ -139,7 +138,9 @@
 
 
                     <div class="clearer"></div>
-
+                    <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+                        <?php //echo $this->getChildChildHtml('container2', '', true, true) ?>
+                    <?php endif;?>
                 </form>
                 <script type="text/javascript">
                 //<![CDATA[
