--- a/app/design/frontend/default/default/template/page/html/head.phtml
+++ b/app/design/frontend/default/default/template/page/html/head.phtml
@@ -28,7 +28,7 @@
 <title><?php echo $this->getTitle() ?></title>
 <meta http-equiv="Cache-Control" content="no-transform" />
 <meta name="viewport" content="width=640, minimum-scale=0.5, maximum-scale=1, user-scalable = no,minimal-ui" />
-<meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>" />
+<meta name="description" content="<?php echo strip_tags($this->getDescription()) ?>" />
 <meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
